Opened 17 years ago

Closed 17 years ago

#1765 closed bug (fixed)

LaunchBox Not Always on All Workspaces

Reported by: bonefish Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/LaunchBox Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Revision: hrev23905. Reproducible on real hardware and in VMware.

How to reproduce:

  • boot Haiku
  • start LaunchBox via Deskbar -> Desktop Applets -> LaunchBox
  • click Terminal to activate it
  • switch to workspace 2 via Alt-F2
  • LaunchPad window is not shown, although per default it is "Show On All Workspaces".

The behavior seems to depend heavily on what window is activated, maybe even the order in which they've been activated/deactivated.

Change History (1)

comment:1 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed the app_server relevant part in hrev24632 - the current workspace was retrieved without holding the window lock which could therefore still return the old workspace with a bit of luck (or a fast machine with SMP :-)).

Changed the application to use B_ALL_WORKSPACES in hrev24633 - now it also don't flicker anymore when switching workspaces.

Note: See TracTickets for help on using tickets.