* AS_CURRENT_WORKSPACE now holds a single window lock before retrieving   the current workspace. * This should fix bug #1765 as far as the app_server is concerned. * Cleanup, removed extraneous white space.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24632 a95241bf-73f2-0310-859d-f6bbb57e9c96